--- a/views/joke.ejs
+++ b/views/joke.ejs
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Just For Fun</title>
-	<link rel = 'stylesheet' type = 'text/css' href = './rd.css'>
+	<!-- <link rel = 'stylesheet' type = 'text/css' href = 'rd.css'> -->
+	<link rel="stylesheet" href="/rd.css">
 </head>
 <body>
 	<meta charset="utf8">
