--- a/views/joke.ejs
+++ b/views/joke.ejs
@@ -2,23 +2,23 @@
 <html>
 <head>
 	<title>Just For Fun</title>
-	<!-- <link rel = 'stylesheet' type = 'text/css' href = 'rd.css'> -->
 	<link rel="stylesheet" href="/rd.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 	<meta charset="utf8">
-	<h1>JOKES</h1>
-	<h2>Have a good time!</h2>
+	<p class="title">JOKES</p>
+	<h3>Have a good time!</h3>
 	<main class='content'>
 	<section class = 'output'>
 		<div class='text'></div>
 	</section>
 	<section class = 'control'>
-		<ul class='joke_menu'>
-			<li><button type='button' class='previous'>Previous</button></li>
-			<li><button type='button' class='new-joke'>New joke</button></li>
-			<li><a class= 'tweet' type= 'button' target='_blank'>Tweet</a></li>
-		</ul>
+		<div class="d-flex justify-content-center align-items-center">
+			<div class="p-2"><button class="previous" type="button">Previous</button></div>
+			<div class="p-2"><button class="new-joke" type="button">New joke</button></div>
+			<div class="p-2"><a class="tweet" target="_blank">Tweet</a></div>
+		</div>
 	</section>
 	</main>
 </body>
